--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@justinc/Dict",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A wrapper around plain old JS objects. Dict is a fantasy-land compliant Semigroup",
   "main": "src/index.js",
   "scripts": {
     "lint": "standard",
     "prepublish": "npm run lint && npm run test",
-    "patch-release": "npm version patch && npm publish --access=public && git push --follow-tags",
+    "postversion": "npm publish --access=public && git push --follow-tags",
+    "major-release": "npm version major",
+    "minor-release": "npm version minor",
+    "patch-release": "npm version patch",
     "test": "ava"
   },
   "keywords": [],
